# BuffOS-Studio

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PRINCIPLES.md  README.md  ROADMAP.md  STYLEGUIDE.md  VISION.md  bootstrap.sh  buff-helper  dev.sh  install.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
docs/: ROADMAP.md
docs/adr/: 0001-engine-first.md
docs/architecture/: ARCHITECTURE.md  MODULES.md
docs/en/: README.md
installer/: launcher.py
sandbox/: docs-v1.sh  run-autopilot.sh
scripts/: migrate-generators.sh
tests/: test_analysis.py  test_apply_buff.py  test_apt_provider.py  test_base_check.py  test_btrfs_check.py  test_btrfs_layout.py  test_buff_assets_scripts.py  test_buff_postinstall_mvp.py  test_catalog_entries.py  test_catalog_loader.py  test_catalog_profile_loader.py  test_catalog_recommendations.py  test_catalog_search.py  test_catalog_structure.py  test_check_renderer.py  test_check_result.py  test_cli.py  test_cli_doctor.py  test_cli_main.py  test_cli_modules.py  test_cli_program_name.py  test_core_plugin.py  test_core_plugin_validators.py  test_default_profile.py  test_default_setup.py  test_distribution_detector.py  test_doctor.py  test_dry_run.py  test_fake_fstab_provider.py  test_generate_docs.py  test_generator_engine.py  test_generators_package.py  test_grub_btrfs_check.py  test_grub_btrfs_installer.py  test_grub_btrfs_installer_optional.py  test_grub_btrfs_validator.py  test_identity.py  test_identity_consistency.py  test_install_engine.py  test_install_executor.py  (+72 more)
tools/: generate.py  generate_docs.py
(+218 files in other folders)
